--- a/src/main/resources/data/brewery/lang/ru_ru.json
+++ b/src/main/resources/data/brewery/lang/ru_ru.json
@@ -74,7 +74,7 @@
   "polydex.brewery.building_barrel.planks": "Доски",
 
   "polydex.brewery.cooking_cauldron": "Готовка в котле",
-  "polydex.brewery.cooking_cauldron.text": "Выкинь нужные ингридиенты в котёл и кликни палкой для старта готовки. После опредененного времени вычерпай все с помощью бутылки. Ты можешь получить Микстуру или готовый напиток.",
+  "polydex.brewery.cooking_cauldron.text": "Выкинь нужные ингридиенты в котёл и кликни палкой для старта готовки. После опредененного времени вычерпай все с помощью бутылки. Ты можешь получить смесь или готовый напиток.",
   "polydex.brewery.aging_with_barrel": "Выдержка в бочках",
-  "polydex.brewery.aging_with_barrel.text": "Чтобы начать выдержку положи Микстуру в нужную бочку. Просто не держи его слишком долго, а то качество упадет. Информация о постройке бочек на следуюйщей странице."
+  "polydex.brewery.aging_with_barrel.text": "Чтобы начать выдержку положи смесь в нужную бочку. Просто не держи его слишком долго, а то качество упадет. Информация о постройке бочек на следуюйщей странице."
 }
